Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42050

QML Text verticalAlignment is wrong when lineHeight is set

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.3.2
    • None
    • OSX 10.9.5, Windows

    Description

      With the attached QML example, when lineHeight is set to something non-1.0, the result will not look as expected (good.png).

      I've also attached a patch that fixes the problem for me if it is agreed that this is a bug.

      Attachments

        1. bad.png
          66 kB
          Daiwei Li
        2. good.png
          66 kB
          Daiwei Li
        3. lineheight-vertical-centering.patch
          3 kB
          Daiwei Li
        4. tst_lineheight.qml
          1 kB
          Daiwei Li
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aalpert Alan Alpert
            daiweili Daiwei Li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes